--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "graphql-request": "^7.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.5.10",
+    "date-fns": "^2.30.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
