--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "netflix_portfolio",
+  "homepage": "https://dev-as-if.github.io/Portfolio",
+  "name": "asif_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,12 +11,13 @@
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "date-fns": "^2.30.0",
+    "gh-pages": "^6.3.0",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.10",
-    "date-fns": "^2.30.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
@@ -25,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
